...
              showUnselectedLabels: true,
              selectedFontSize: 11,
              unselectedFontSize: 11,
              items: const [
                BottomNavigationBarItem(
                  icon: Icon(FontAwesomeIcons.house, size: 18),
                  label: 'الرئيسية',
                ),
                BottomNavigationBarItem(
                  icon: Icon(FontAwesomeIcons.tableCellsLarge, size: 18),
                  label: 'التصنيفات',
                ),
                BottomNavigationBarItem(
                  icon: Icon(FontAwesomeIcons.store, size: 18),
                  label: 'الشركات',
                ),
                BottomNavigationBarItem(
                  icon: Icon(FontAwesomeIcons.solidStar, size: 18),
                  label: 'متابَعة',
                ),
                BottomNavigationBarItem(
                  icon: Icon(FontAwesomeIcons.user, size: 18),
                  label: 'حسابي',
                ),
              ],
            ),
          ),
        ),
      ),
...
