...
              borderRadius: BorderRadius.circular(12.r),
            ),
            child: Column(
              children: [
                ListTile(
                  leading: const Icon(Icons.favorite, color: Colors.pinkAccent),
                  title: const Text('العروض المفضّلة',
                      style: TextStyle(color: Colors.white)),
                  trailing: const Icon(Icons.chevron_right,
                      color: Colors.white54),
                  onTap: () {
                    Navigator.push(
                      context,
...
                    );
                  },
                ),
                const Divider(height: 1, color: Colors.white12),
                ListTile(
                  leading: const Icon(Icons.settings, color: Colors.blueAccent),
                  title: const Text('الإعدادات',
                      style: TextStyle(color: Colors.white)),
                  trailing: const Icon(Icons.chevron_right,
                      color: Colors.white54),
                  onTap: () {
                    Navigator.push(
                      context,
...
