...
                        shape: RoundedRectangleBorder(
                          borderRadius: BorderRadius.circular(12.r),
                        ),
                      ),
                      icon: Icon(vm.hasUserReviewed ? Icons.edit : Icons.add),
                      label: Text(
                        vm.hasUserReviewed ? 'تعديل تقييمك' : 'أضف تقييمك',
                        style: TextStyle(
                          fontSize: 15.sp,
                          fontWeight: FontWeight.bold,
                        ),
                      ),
                    ),
...

                  // عنوان التقييمات
                  if (vm.reviews.isNotEmpty) ...[
                    Row(
                      children: [
                        Text(
                          'التقييمات',
                          style: TextStyle(
                            color: Colors.white,
                            fontSize: 18.sp,
                            fontWeight: FontWeight.bold,
                          ),
                        ),
...
